# KMeans

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: age_spendingscore.csv
